tests/ui/unexpected_after_array_element.stderr
error: no rules expected the token `=>`
 --> tests/ui/unexpected_after_array_element.rs:4:19
  |
4 |     plist!([ true => ]);
  |                   ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
